[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprite/Hoop.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Hoop.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Hoop_Area.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0059

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Bouncing",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Laying",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Flying",
"speed": 20.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Stunned",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 26.3684

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 11.3
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, -100, 0 )
angular_velocity = -720.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Hoop" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="RigidShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.555, 1.969 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 15 )
animation = "Flying"
playing = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 1, 0.993727 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 16 )

[node name="Trail" type="Particles2D" parent="."]
process_material = SubResource( 17 )

[node name="BounceTween" type="Tween" parent="."]

[node name="BounceTween2" type="Tween" parent="."]

[node name="StunTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_completed" from="BounceTween" to="." method="_go_to_laying"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
